--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "openai": "^4.68.1"
+    "openai": "^4.68.1",
+    "redis": "^4.7.0",
+    "util": "^0.12.5"
   }
 }
